# code-review-ai

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  alembic.ini  contribution.md  docker-compose.yml  env.example  pyproject.toml
api/: __init__.py  dependencies.py  main.py
api/middleware/: auth.py  rate_limit.py
api/routers/: analyze.py  feedback.py  health.py
core/: __init__.py  config.py
core/feedback/: __init__.py  learner.py
core/llm/: cache.py  client.py  prompts.py
core/patterns/: __init__.py  rules.py
core/rag/: __init__.py  chunking.py  embeddings.py  retriever.py
db/: __init__.py  models.py
db/migrations/: env.py
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md
infrastructure/docker/: Dockerfile.api  Dockerfile.worker
observability/: __init__.py  logging.py  metrics.py  tracing.py
scripts/: benchmark.py  seed_data.py  setup.sh
tests/: __init__.py
tests/evals/: run_golden_dataset.py
tests/integration/: test_api_endpoints.py
tests/load/: analyze_endpoint.js
tests/unit/: test_llm_client.py  test_pattern_matcher.py
workers/: __init__.py  celery_app.py
workers/tasks/: analyze_code.py  generate_embeddings.py  retrain.py
